[fix] fix global index diaries view layout issue

--- a/app/assets/stylesheets/pages/_index.css.sass
+++ b/app/assets/stylesheets/pages/_index.css.sass
@@ -177,6 +177,8 @@
   .diary-info-wrapper
     +pie-clearfix
     position: relative
+    height: 220px
+    overflow: hidden
     margin-top: 20px
     .diary-baku
       @extend %baku
@@ -195,7 +197,6 @@
       font-size: $fz-m
     .diary-content
       margin-top: 20px
-      height: 120px
 
 
 .global-index-business-wrapper
